stylesheet.less
/* ... */
/* ===============================
   MAIN
   =============================== */

body {
	background-color: @color-swatch7;
}

.contain {
	padding: 40px;
	margin: 0 auto;
	max-width: 1024px;
	@media @mobile {
		padding: 20px;
	}
}

.bk-header .contain {
	padding: 20px 40px;
	@media @mobile {
		padding: 20px;
	}
}

.header-profile .contain {
	padding: 0 40px;
	@media @mobile {
		padding: 20px;
	}
}

#main {
	padding-top: 100px;
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
    background: @color-swatch1;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}


/* ===============================
   HEADER
   =============================== */

.bk-header {
	background-color: @color-swatch2;
	border-top: 15px solid @color-swatch7;
	padding: 20px 0;
	position: fixed;
    -webkit-overflow-scrolling: touch;
    left: 0;
	right: 0;
	top: 0;
	width: 100%;
	z-index: 1;
	@media only screen and (max-width: 568px) {
		padding: 7px 0;
        min-height: 100px;
	}
}

.bk-header .contain {
    @media only screen and (max-width: 480px) {
        max-width: 68%;
        float: left;
    }
}

.widget {
	&.logo, &.companyname {
		display: inline-block;
	}
	&.logo {
		margin-right: 2px;
        padding-top: 10px;
		vertical-align: text-bottom;
		img {
			vertical-align: top;
            max-height: 55px;
		}
        @media only screen and (max-width: 568px) {
            padding-top: 2px;
        }
	}
	&.companyname {
        vertical-align: top;
        max-width: 84%;
        @media only screen and (max-width: 568px) {
            max-width: 75%;
        }
        @media only screen and (max-width: 480px) {
            max-width: 100%;
        }
		a {
			@media only screen and (max-width: 568px) {
				font-size: bkscale(@font-swatch10-font-size,0.8);
                line-height: bkscale(@font-swatch10-font-size,0.85);
			}
            @media @mobile {
                font-size: bkscale(@font-swatch10-font-size,0.8);
                line-height: bkscale(@font-swatch10-font-size,0.85);
            }
		}
	}
}

.header-profile {
	background-color: @color-swatch2;
	padding-top: 70px;
	padding-bottom: 40px;
	width: 100%;
	display: inline-block;
    @media @mobile {
        padding: 40px 0;
    }
	.header-prof-left {
			display: inline-block;
			vertical-align: top;
			width: 85%;
			@media only screen and (max-width: 800px) {
				width: 78%;
			}
			@media @tablet {
				width: 80%;
			}
			@media only screen and (max-width: 650px) {
				width: 100%;
			}
		.widget.profile {
			display: inline-block;
			vertical-align: top;
			margin-right: 3%;
			margin-bottom: 3%;
			max-width: 47%;
			@media only screen and (max-width: 650px) {
				max-width: 100%;
				width: 100%;
				margin-right: 0;
				margin-bottom: 5%;
			}
			ul.twitter {
				.twitter-profile-pic, div.twitter-content, time, span {
					display: inline-block;
					vertical-align: top;
				}
				.twitter-profile-pic {
					margin-right: 3%;
                    margin-top: 2px;
					width: 15%;
					@media only screen and (max-width: 650px) {
						width: auto;
					}
					a img {
						width: 48px;
					}
				}
				.twitter-content {
                    padding-left: 0;
					a span:hover {
						text-decoration: underline;
					}
					width: 80%;
					@media @mobile {
						width: auto;
					}
					p {
						padding-bottom: 0;
					}
				}
			}
			.bk-profile-address p {
				padding-bottom: 0;
			}
            .bk-profile-socialicons {
                margin: 0;
            }
            form fieldset input {
                height: 45px;
            }
		}
	}
	.header-prof-right {
		float: right;
		display: inline-block;
		vertical-align: top;
		@media only screen and (max-width: 650px) {
			width: 100%;
			float: left;
		}
		.widget.clicktocall {
            margin-top: 0;
            a {
    			cursor: text;
                background-image: image('/images/icon-phone-grey.png');
                background-size: 20px;
                overflow: hidden;
                background-repeat: no-repeat;
                background-position: 2px center;
                padding-left: 20px;
    			@media @mobile {
    				cursor: pointer;
                    background-image: image('/images/icon-phone-white.png');
                    background-repeat: no-repeat;
                    background-position: 10px center;
                    background-size: 20px;
                    overflow: hidden;
                    padding-left: 35px;
    			}
            }
		}
	}
}


/* SVG Icons */

.svg {
    .header-profile .header-prof-right .widget.clicktocall a {
        background-image: image('/images/icon-phone-grey.svg');
        background-size: contain;
        @media @mobile {
            background-image: image('/images/icon-phone-white.svg');
            background-size: 20px;
        }
    }
}


/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.bk-nav {
	background: @color-swatch7;
	height: 100%;
	position: fixed;
	right: -320px;
	width: 320px;
	.transition( all, 0.5s, ease);
    z-index: 9999;
    .widget.socialicons {
    	border-left: 1px solid darken(@color-swatch6, 50%);
    	padding: 30px 15px;
    	margin: 0;
    }
	@media only screen and (max-height: 450px) {
		position: absolute;
		height: auto;
	}
    @media @mobile {
    	right: -250px;
    	width: 250px;
    }
}
/* ... */

